Compile in G1 evacuation failure injection code based on define

XMLWordPrintable

    • gc
    • b20

      For pinned region development we inject evacuation failures via the G1YoungGCEvacuationFailureInjector.

      The important part about is that by default in product mode this code is completely compiled out using defines.

      This is very inconvenient when trying to test performance impact of changes, requiring developers to change lots of ifdefs in the code.

      In this CR we suggest to add a global define (EVAC_FAILURE_INJECTOR) like for task queue statistics that enables/disables compilation of that functionality. By default for non-product code the functionality is supposed to be compiled in (and not in product code), but that can be changed during development.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: