8274910: Compile in G1 evacuation failure injection code based on define

Reviewed-by: sjohanss, ayang